2005-08-15  Matthias Clasen  <mclasen@redhat.com>

	* glib/gbacktrace.c (g_on_error_stack_trace): Wait for
	the child process and then simply return. This makes 
	The "S" option work as documented in g_on_error_query().
	(#313125, Matthew F. Barnes)

	* glib/gunicode.h: Update the link to Unicode category
	values.  (#313369, Behnam Esfahbod)

	* glib/gqueue.c (g_queue_find_custom): Clarify docs
	a little.  (#311727, Tristan van Berkom)

	* glib/abicheck.sh, gobject/abicheck.sh: Make the 
	check work on ia64 too, where some symbols ended up 
	in yet another section.

2005-08-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.8.0 ===

	* NEWS: Updates

2005-08-12  Tim-Philipp Müller  <tim at centricular dot net>

	* gobject/genums.c: (g_flags_get_first_value): Special-case flag
	  value of 0. Instead of returning the first random GFlagsValue
	  we come across, return the GFlagsValue for 0 if it exists or
	  NULL if it does not exist. Never return the GFlagsValue for 0
	  if the requested flags value is nonzero.

2005-08-12  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version to 2.8.0

2005-08-11  Tor Lillqvist  <tml@novell.com>

	* glib/gutils.c (g_get_any_init): Use "localhost" as fallback for
	g_get_host_name(), not "unknown".

2005-08-10  Stepan Kasal  <kasal@ucw.cz>

	Fix typos: Invokation --> Invocation (in various places)

2005-08-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/gfileutils.c (g_build_path_va, g_build_pathname_va):
	Take a va_list*, not a va_list, to avoid compiler warnings
	about uninitialized variables.

2005-08-09  Matthias Clasen  <mclasen@redhat.com>

	* tests/gobject/Makefile.am (test_programs): Add it here.

	* tests/gobject/gvalue-test.c: Beginning of a test suite
	for GValue.

	* NEWS: Updates

2005-08-08  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.c (_g_compute_locale_variants): Initialize
	variables to not make gcc nervous.
